United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6992998 CMSWaitDuration=0 causes hangs with +ExplicitGCInvokesConcurrent
6992998 : CMSWaitDuration=0 causes hangs with +ExplicitGCInvokesConcurrent

Details
Type:
Bug
Submit Date:
2010-10-19
Status:
Closed
Updated Date:
2011-04-20
Project Name:
JDK
Resolved Date:
2011-04-20
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
-XX:CMSWaitDuration=0 -XX:+ExplicitGCInvokesConcurrent can cause a deadlock because of a race between the setting of the request flag and the CMS thread going into a wait() without checking the disposition of the
flag. CMSWaitDuration=0 is a potential (interim) workaround of sorts for (some instances of) 6412868.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/cd3ef3fd20dd
                                     
2010-12-04
SUGGESTED FIX

Changeset URL:

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/cd3ef3fd20dd
                                     
2010-10-19
EVALUATION

Small change, probably worth doing sooner rather than later, especially given its relationship wih 6412968.
When fixed, this will also have the beneficial effect of (in some configurations) reducing the variance
in the latency of concurrent full gc's seen at the caller.
                                     
2010-10-19



Hardware and Software, Engineered to Work Together